[gd_scene load_steps=4 format=3 uid="uid://btfglfhqdmtns"]

[ext_resource type="Texture2D" uid="uid://bgvg1ci81sjkg" path="res://resources/sprites/units/mage_knight.png" id="1_7sg1y"]
[ext_resource type="Script" path="res://hall_of_heroes/hall_of_heroes_unit_container.gd" id="1_wemha"]
[ext_resource type="Texture2D" uid="uid://b5a2jao5ef4rq" path="res://resources/sprites/icons/monster_icon.png" id="3_5bv4f"]

[node name="HallOfHeroesUnitContainer" type="VBoxContainer"]
script = ExtResource("1_wemha")

[node name="UnitIcon" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_7sg1y")
expand_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(76, 25)
layout_mode = 2

[node name="UnitName" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="UnitDeadIcon" type="TextureRect" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(23, 23)
layout_mode = 2
texture = ExtResource("3_5bv4f")
expand_mode = 3

[node name="UnitLevel" type="Label" parent="."]
layout_mode = 2
text = "Lv"
